# pmp-llm-gateway-api

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plugins.toml.example
config/: default.toml
db/migrations/: 20260104000001_enable_pgvector.sql  20260105000000_create_users.sql  20260105000001_create_teams.sql  20260105000002_create_api_keys.sql  20260105000003_create_models.sql  20260105000004_create_prompts.sql  20260105000005_create_workflows.sql  20260105000006_create_credentials.sql  20260105000007_create_knowledge_bases.sql  20260105000008_create_experiments.sql  20260105000009_create_test_cases.sql  20260105000010_create_app_configurations.sql  20260105000011_create_execution_logs.sql  20260105000012_create_budgets.sql  20260105000013_create_usage_records.sql  20260105000014_create_webhooks.sql  20260105000015_create_webhook_deliveries.sql  20260105000016_create_operations.sql  20260105000018_create_external_apis.sql  20260105000019_create_experiment_records.sql  20260105000020_create_test_case_results.sql  20260112000001_create_knowledge_base_documents.sql
db/seeds/: 20260105100001_seed_development_data.sql
doc/: COVERAGE_AUDIT.md  PERSISTENCE_AUDIT.md  ROADMAP.md  SECURITY.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
public/: index.html
public/css/: custom.css
public/js/: api.js  app.js  auth.js  utils.js
public/js/views/: api-keys.js  budgets.js  configuration.js  credentials.js  dashboard.js  execution-logs.js  experiments.js  external-apis.js  knowledge-bases.js  models.js  prompts.js  teams.js  test-cases.js  webhooks.js  workflows.js
resources/e2e/: package-lock.json  package.json  playwright.config.ts
resources/e2e/tests/: api-keys.spec.ts  auth.spec.ts  fixtures.ts  models.spec.ts  navigation.spec.ts  prompts.spec.ts
src/: lib.rs  main.rs
src/api/: health.rs  mod.rs  router.rs  state.rs
src/api/admin/: api_keys.rs  config.rs  credentials.rs  execution_logs.rs  experiments.rs  external_apis.rs  knowledge_bases.rs  mod.rs  models.rs  prompts.rs  teams.rs  test_cases.rs  usage.rs  webhooks.rs  workflows.rs
src/api/auth/: mod.rs
src/api/middleware/: admin_auth.rs  auth.rs  logging.rs  metrics.rs  mod.rs  security.rs  user_auth.rs
src/api/types/: chat.rs  error.rs  json.rs  mod.rs  models.rs  operation.rs
src/api/v1/: chat.rs  mod.rs  models.rs  operations.rs  workflows.rs
src/cli/: mod.rs
src/cli/api/: mod.rs
src/cli/serve/: mod.rs
src/cli/ui/: mod.rs
src/config/: app_config.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/api_key/: entity.rs  mod.rs  repository.rs  validation.rs
src/domain/cache/: key.rs  mod.rs  repository.rs
src/domain/chain/: entity.rs  executor.rs  mod.rs  repository.rs
src/domain/config/: entity.rs  execution_log.rs  mod.rs  repository.rs
src/domain/crag/: config.rs  mod.rs  pipeline.rs  scorer.rs
src/domain/credentials/: credential.rs  mod.rs  provider.rs  stored.rs
src/domain/embedding/: mod.rs  provider.rs  request.rs  response.rs
src/domain/experiment/: assignment.rs  entity.rs  mod.rs  record.rs  repository.rs  result.rs  validation.rs
src/domain/external_api/: entity.rs  mod.rs
src/domain/ingestion/: chunker.rs  mod.rs  parser.rs  pipeline.rs  validation.rs
src/domain/knowledge_base/: document.rs  entity.rs  filter.rs  mod.rs  provider.rs  validation.rs
src/domain/llm/: message.rs  mod.rs  provider.rs  provider_resolver.rs  request.rs  response.rs
src/domain/model/: entity.rs  mod.rs  repository.rs  validation.rs
src/domain/operation/: entity.rs  error.rs  mod.rs  repository.rs
src/domain/plugin/: credential_provider.rs  embedding_provider.rs  entity.rs  error.rs  extensions.rs  knowledge_base.rs  llm_provider.rs  mod.rs
src/domain/prompt/: entity.rs  mod.rs  repository.rs  template.rs
src/domain/semantic_cache/: config.rs  mod.rs  repository.rs
src/domain/storage/: entity.rs  mod.rs  repository.rs
src/domain/team/: entity.rs  mod.rs  repository.rs  validation.rs
src/domain/test_case/: entity.rs  mod.rs  repository.rs  result.rs  validation.rs
src/domain/traits/: mod.rs  repository.rs
src/infrastructure/: logging.rs  mod.rs
tests/load/: README.md  chat.js  health.js
(+172 files in other folders)
