[package]
name = "pmp-llm-gateway"
version = "0.1.0"
edition = "2024"
description = "LLM Gateway API - Unified interface for multiple LLM providers"
authors = ["PMP Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "fs"] }
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
bytes = "1"

# Security / Cryptography
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Document parsing
pulldown-cmark = "0.9"
scraper = "0.18"
unicode-segmentation = "1.10"
mime_guess = "2.0"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# AWS SDK
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-bedrockagentruntime = "1"
aws-smithy-types = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
